modified logo and package.json

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar">
       <div class="container">
-        <h1 class="logo">denseless</h1>
+        <h1 class="logo">denseless Core</h1>
         <ul class="nav">
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
